[gd_scene load_steps=2 format=3 uid="uid://207mrb3qwmx4"]

[ext_resource type="Script" path="res://scripts/ui/customer_queue.gd" id="1_queue"]

[node name="CustomerQueue" type="PanelContainer"]
custom_minimum_size = Vector2(300, 80)
offset_right = 300.0
offset_bottom = 80.0
script = ExtResource("1_queue")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Customer Queue"

[node name="QueueCount" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
text = "0/5"

[node name="QueueDisplay" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="EmptySlot1" type="PanelContainer" parent="MarginContainer/VBoxContainer/QueueDisplay"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="EmptySlot2" type="PanelContainer" parent="MarginContainer/VBoxContainer/QueueDisplay"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="EmptySlot3" type="PanelContainer" parent="MarginContainer/VBoxContainer/QueueDisplay"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="EmptySlot4" type="PanelContainer" parent="MarginContainer/VBoxContainer/QueueDisplay"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="EmptySlot5" type="PanelContainer" parent="MarginContainer/VBoxContainer/QueueDisplay"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
